<resources>
    <string name="app_name">StoryApp</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="action_login">Login</string>
    <string name="label_name">Name</string>
    <string name="action_register">Register</string>
    <string name="error_empty_name">Please insert your name</string>
    <string name="error_empty_email">Please insert your email</string>
    <string name="error_empty_password">Please insert your password</string>
    <string name="message_register_success">Register Success</string>
    <string name="message_unknown_error">Unknown Error</string>
    <string name="title_dialog_error">Waw something wrong</string>
    <string name="label_greeting_user">Hello, %1$s..</string>
    <string name="action_camera">Camera</string>
    <string name="action_gallery">Gallery</string>
    <string name="hint_description">Story Description</string>
    <string name="action_upload">Upload Story</string>
    <string name="message_failed_take_picture">Upload failed</string>
    <string name="message_not_permitted">Permission not granted</string>
    <string name="title_choose_picture">Choose a picture</string>
    <string name="title_new_story">Add New Story</string>
    <string name="error_desc_empty">Description can\'t empty</string>
    <string name="message_upload_success">Upload success</string>
    <string name="title_upload_info">Upload info</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque lobortis nunc nec sodales consectetur. Sed eget auctor quam. Nulla facilisi. Etiam vitae nulla sed arcu varius tempus.</string>
    <string name="label_dont_have_account">Don\'t have account ?</string>
    <string name="label_register_here">Register here</string>
    <string name="label_logout">Logout</string>
    <string name="label_form_register">Form Register</string>
    <string name="label_already_have_account">Already have account ?</string>
    <string name="label_login_here">Login here</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="message_story_with_location_not_found">Story with location not found!</string>
</resources>